[package]
name = "roanluder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "roanluder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0.89"
directories = "5.0.1"
lazy-regex = "3.3.0"
models = { path = "../models" }
once_cell = "1.20.2"
reqwest = "0.12.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
